# music-manager

./: Cargo.toml  diesel.toml
migrations/2026-03-02-153305-0000_artists/: up.sql
migrations/2026-03-02-153311-0000_genre/: down.sql  up.sql
migrations/2026-03-02-153315-0000_album/: up.sql
migrations/2026-03-02-153330-0000_songs/: up.sql
migrations/2026-03-02-153334-0000_images/: up.sql
migrations/2026-03-02-154256-0000_features/: up.sql
migrations/2026-03-07-125917-0000_playlists/: up.sql
migrations/2026-03-07-130245-0000_playlistref/: down.sql  up.sql
src/: commands.rs  lib.rs  main.rs  models.rs  schema.rs
src/manager/: commands.rs  mod.rs  models.rs  schema.rs  types.rs  utils.rs
