[package]
name = "music-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
diesel = { version = "2.3.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
dotenvy = { version = "0.15.7", features = ["clap", "cli"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
strum = "0.28.0"
strum_macros = "0.28.0"
symphonia = { version = "0.5.5", features = ["all"] }
ulid = "1.2.1"
